init USA power map

--- a/db/events.yaml
+++ b/db/events.yaml
@@ -4,6 +4,12 @@ events:
     type: riunione-segreta
     location: Georgia
     outcome: federal-reserve
+  jekyll-island:
+    year: 1910
+    month: 11
+    type: meeting
+    location: Jekyll Island, Georgia, USA
+    outcome: Federal Reserve Act draft
   1917-balfour-declaration:
     year: 1917
     month: 11
