--- a/db/families.yaml
+++ b/db/families.yaml
@@ -625,22 +625,6 @@ families:
     members:
     - person: emmanuel-janssen
       role: patriarch
-  jiang-zemin:
-    origin: China
-    founder: jiang-zemin
-    sector: politics, finance
-    generations: 3
-    status: active
-    members:
-    - person: alvin-jiang
-      generation: 3
-      role: grandson of Jiang Zemin
-    - person: jiang-zemin
-      generation: 1
-      role: patriarch
-    - person: jiang-mianheng
-      generation: 2
-      role: son of Jiang Zemin
   kabila:
     origin: DRC
     founder: laurent-kabila
@@ -837,7 +821,7 @@ families:
     - person: irineu-marinho
       generation: 1
       role: founder
-  michelin:
+  michelin-family:
     origin: FRA
     founder: edouard-michelin-sr
     sector: industrial
@@ -1339,6 +1323,22 @@ families:
     - person: dan-gertler
       generation: 3
       role: grandson
+  shanghai-clique:
+    origin: China
+    founder: jiang-zemin
+    sector: politics, finance
+    generations: 3
+    status: active
+    members:
+    - person: alvin-jiang
+      generation: 3
+      role: grandson of Jiang Zemin
+    - person: jiang-zemin
+      generation: 1
+      role: patriarch
+    - person: jiang-mianheng
+      generation: 2
+      role: son of Jiang Zemin
   shinawatra:
     origin: Thailand
     founder: thaksin-shinawatra
